@@ -68,8 +68,9 @@ public final class Entity {
   public static final String POLICY = "policy";
 
   //
-  // Team/user
+  // Role, team and user
   //
+  public static final String ROLE = "role";
   public static final String USER = "user";
   public static final String TEAM = "team";
 
@@ -77,6 +78,7 @@ public final class Entity {
   // Operations
   //
   public static final String INGESTION = "ingestion";
+  public static final String WEBHOOK = "webhook";
 
   private Entity() {}
 
@@ -144,6 +146,14 @@ public final class Entity {
     return entityRepository.getEntityInterface(entity);
   }
 
+  public static void deleteEntity(String entity, UUID entityId, boolean recursive) throws IOException {
+    EntityRepository<?> dao = ENTITY_REPOSITORY_MAP.get(entity);
+    if (dao == null) {
+      throw EntityNotFoundException.byMessage(CatalogExceptionMessage.entityTypeNotFound(entity));
+    }
+    dao.delete(entityId, recursive);
+  }
+
   public static <T> String getEntityNameFromClass(Class<T> clz) {
     return CANONICAL_ENTITY_NAME_MAP.get(clz.getSimpleName().toLowerCase(Locale.ROOT));
   }
@@ -152,13 +162,17 @@ public final class Entity {
     return CANONICAL_ENTITY_NAME_MAP.get(object.getClass().getSimpleName().toLowerCase(Locale.ROOT));
   }
 
+  /** Class for getting validated entity list from a queryParam with list of entities. */
   public static class EntityList {
-
     public static List<String> getEntityList(String name, String entitiesParam) {
       if (entitiesParam == null) {
         return null;
       }
-      List<String> list = Arrays.asList(entitiesParam.replaceAll("\\s", "").split(","));
+      entitiesParam = entitiesParam.replace(" ", "");
+      if (entitiesParam.equals("*")) {
+        return List.of("*");
+      }
+      List<String> list = Arrays.asList(entitiesParam.split(","));
       validateEntities(name, list);
       return list;
     }
